Fixed white space at the bottom of screen problem - make footer absolutely positioned - create new class "main-view-content" which adds a scrollbar at the appropriate time (which doesn't include the footer) - wrap the sidebar-menu with a scroll bar

--- a/packages/composer-playground/src/app/editor/editor.component.scss
+++ b/packages/composer-playground/src/app/editor/editor.component.scss
@@ -16,8 +16,9 @@ app-editor {
       & > * {
         padding: $space-medium $space-large;
       }
-      margin-top: $space-large;
-
+      display: flex;
+      flex-direction: column;
+      overflow-y: auto;
       span {
         color: $secondary-text;
       }
@@ -26,6 +27,7 @@ app-editor {
         padding: 0;
         max-height: 60vh;
         overflow-y: auto;
+        min-height: 90px;
         .error {
             color: $first-warning;
         }
